# inferium

./: .gitignore  CMakeLists.txt
src/: dequant.hpp  dequantize.hpp  forward_pass.cpp  forward_pass.hpp  gguf_parser.cpp  gguf_parser.hpp  inference.cpp  inference.hpp  main.cpp  mapped_file.cpp  mapped_file.hpp  model.cpp  model.hpp  thread_pool.cpp  thread_pool.hpp  tokenizer.cpp  tokenizer.hpp
